@@ -1,5 +1,9 @@
 ================================ Next release ================================
 
+Bug fixes:
+    - Specifying a custom reactor with the "-r"-argument to piped should now
+      work again.
+
 ========================== Release 0.5.3 2013-01-06 ==========================
 
 Features:
